create category, brand models and update product